--- a/www/templates/www/index.html
+++ b/www/templates/www/index.html
@@ -12,7 +12,7 @@
     {% endfor %}
     <br>
     <p><em><strong>NOTE:</strong></em>
-    The scraper doesn't count views of articles from Khmer edition or Weekly | Articles whose viewcounts remain unchanged for more than a week are ignored | The scraper runs once daily
+    The scraper doesn't count views of articles from Khmer edition or Weekly | Articles whose viewcounts remain unchanged for more than a week are ignored | The scraper runs once daily | Vanity, vanity, all is vanity
     </p>
 </body>
 </html>
