--- a/www/templates/www/index.html
+++ b/www/templates/www/index.html
@@ -8,11 +8,10 @@
 <h3>Each <em>Khmer Times</em> reporter or contributor's total pageviews since 08-02-2016</h3>
 <h3><a href="https://github.com/geezhawk/django-view-tracker">[View source on Github]</a></h3>
     {% for byline in bylines %}
-    <p>{{byline.name}}: <strong>{{byline.view_count}}</strong> total views</p>
+    <p>{{byline.name}}: <strong>{{byline.view_count}}</strong></p>
     {% endfor %}
     <br>
-    <p><em><strong>NOTE:</strong></em>
-    The scraper doesn't count views of articles from Khmer edition or Weekly | Articles whose viewcounts remain unchanged for more than a week are ignored | The scraper runs once daily at 7am | Because of site's strange formatting, names may not be perfect | This is a work in progress - expect new stats to be added soon :)
+    <p><em><strong>NOTE:</strong></em> The scraper runs once daily at 7am.
     </p>
 </body>
 </html>
