--- a/www/templates/jinja2/index.html
+++ b/www/templates/jinja2/index.html
@@ -4,7 +4,7 @@
     <title>Three Digit</title>
 </head>
 <body>
-<h2>Data about Khmer Times pageviews, sorted by reporter. Scraped twice daily.</h2>
+<h2>Data about Khmer Times pageviews, sorted by reporter. Scraped twice daily. Numbers are since 13-02-2016</h2>
 <h2><a href="https://github.com/geezhawk/django-view-tracker">View source on GitHub.</a></h2>
 {% for k, v in bylines.items() %}
     <h4>{{k}}</h4>
