--- a/www/templates/www/all-stats.html
+++ b/www/templates/www/all-stats.html
@@ -1,4 +1,8 @@
 {% extends 'www/base.html' %}
 {% block content %}
-<div id="application"></div>
+<div class="container">
+    <div class="jumbotron">
+        <div id="application"></div>
+    </div>
+</div>
 {% endblock %}
