--- a/www/templates/www/all-stats.html
+++ b/www/templates/www/all-stats.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <div class="jumbotron">
-        <div id="application"></div>
+        <div id="app"></div>
     </div>
 </div>
 {% endblock %}
