--- a/www/templates/www/base.html
+++ b/www/templates/www/base.html
@@ -6,7 +6,7 @@
     {% render_bundle 'main' 'css' %}
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand">KT View Stats</a>
