--- a/www/templates/www/base.html
+++ b/www/templates/www/base.html
@@ -14,6 +14,6 @@
       </div>
     </nav>
     {% block content %}{% endblock %}
-    <script src="{% static 'bundles/main.js' %}"</script>
+    <script src="{% static 'bundles/main.js' %}"></script>
 </body>
 </html>
